# diplom-work

./: .gitignore  README.md  diplomWork.sln  docker-compose.mqtt.yml  docker-compose.yml  for_cubic.py  log.txt  ml_detailed_structure.txt  ml_logic.txt  requirements.txt  run-backend.ps1
diplomWork.Tests/: AdminAccessServiceTests.cs  AdminUserServiceTests.cs  (+17 more)
ml-worker/extract-line-chart-data/: Dockerfile  README.md  fix.py  playground.ipynb  playground.py  pyproject.toml  requirements.txt  requirements1.txt  setup_local_env.sh  worker_local copy.py  worker_local.py  worker_local_backup.py
ml-worker/extract-line-chart-data/output/: result_IMG_20251211_161803.json  result_IMG_20251211_161814.json
ml-worker/extract-line-chart-data/src/plextract/: extract.py
ml-worker/extract-line-chart-data/src/plextract/local/: __init__.py  app copy.py  app.py  chartdete copy 2.py  chartdete copy.py  chartdete.py  lineformer copy 3.py  lineformer copy.py  lineformer copy2.py  lineformer.py  trocr.py
ml-worker/extract-line-chart-data/src/plextract/modal/: __init__.py  app.py  lineformer.py  modal.py  trocr.py
ml-worker/extract-line-chart-data/src/plextract/modal/chartdete/: __init__.py  chartdete.py
ml-worker/extract-line-chart-data/src/plextract/utils/: __init__.py  correct_coordinates copy 2.py  correct_coordinates copy 3.py  correct_coordinates copy 31.py  correct_coordinates copy 4.py  correct_coordinates copy 5.py  correct_coordinates copy.py  correct_coordinates.py  logging.py
ml-worker/extract-line-chart-data/tests/utils/: test_correct_coordinates.py
(+383 files in other folders)
